fix logo rows margin and Schrodinger logo on mobile

--- a/website/assets/styles/pages/platform.less
+++ b/website/assets/styles/pages/platform.less
@@ -377,7 +377,7 @@
         vertical-align: middle;
         z-index: 0;
         width: calc(~'18px + 100%');
-        height: auto;
+        height: calc(~'56px + 100%');
       }
       img:not(a > img) {
         position: relative;
